# internet-tehnologije-2025-ai_personal_assistant_2022_1010

./: .gitignore  .replit  Dockerfile.backend  Dockerfile.frontend  README.md  README_Local.md  auth.py  database.py  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pkb.db  pyproject.toml  rag.py  replit.md  requirements.txt  start-app.bat  tailwind.config.ts  test_main.py
.github/workflows/: ci-cd.yml
attached_assets/: Pasted-You-are-building-a-FULL-STACK-application-FROM-SCRATCH-_1769684422149.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: layout-shell.tsx
client/src/components/ui/: button.tsx
client/src/hooks/: use-auth.ts  use-chat.ts  use-documents.ts
client/src/pages/: chat.tsx  dashboard.tsx  documents.tsx  login.tsx  not-found.tsx  register.tsx
server/: index.ts  routes.ts
shared/: routes.ts  schema.ts
